Fix spacing in FireFox

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -36,8 +36,8 @@ li:hover {
   overflow: hidden;
   right: 0;
   top: 0;
-  width: 470;
-  height: 600;
+  width: 470px;
+  height: 580px;
 }
 
 #avatar img {
